# DueViktor-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: pre-commit.yml
